--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yaml": "^1.10.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "allow": "sudo sysctl net.ipv4.ip_unprivileged_port_start=0",
+    "start": "HTTPS=true SSL_CRT_FILE=/home/enovikov11/local-ssl/fullchain.pem SSL_KEY_FILE=/home/enovikov11/local-ssl/privkey.pem HOST=local.enovikov11.ru PORT=443 react-scripts start",
+    "build": "rm -rf build && react-scripts build",
+    "serve": "serve -s -l tcp://local.enovikov11.ru:443 --ssl-cert /home/enovikov11/local-ssl/fullchain.pem --ssl-key /home/enovikov11/local-ssl/privkey.pem build",
+    "build-serve": "npm run build && npm run serve",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
