--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
     "yaml": "^1.10.2"
   },
+  "homepage": "https://vr-apps.github.io/",
   "scripts": {
     "allow": "sudo sysctl net.ipv4.ip_unprivileged_port_start=0",
     "start": "HTTPS=true SSL_CRT_FILE=/home/enovikov11/local-ssl/fullchain.pem SSL_KEY_FILE=/home/enovikov11/local-ssl/privkey.pem HOST=local.enovikov11.ru PORT=443 react-scripts start",
     "build": "rm -rf build && react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "serve": "serve -s -l tcp://local.enovikov11.ru:443 --ssl-cert /home/enovikov11/local-ssl/fullchain.pem --ssl-key /home/enovikov11/local-ssl/privkey.pem build",
     "build-serve": "npm run build && npm run serve",
     "eject": "react-scripts eject"
