--- a/package.json
+++ b/package.json
@@ -19,13 +19,10 @@
   "homepage": "https://vr-apps.github.io/",
   "scripts": {
     "allow": "sudo sysctl net.ipv4.ip_unprivileged_port_start=0",
-    "start": "HTTPS=true SSL_CRT_FILE=/home/enovikov11/local-ssl/fullchain.pem SSL_KEY_FILE=/home/enovikov11/local-ssl/privkey.pem HOST=local.enovikov11.ru PORT=443 react-scripts start",
-    "build": "rm -rf build && react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "serve": "serve -s -l tcp://local.enovikov11.ru:443 --ssl-cert /home/enovikov11/local-ssl/fullchain.pem --ssl-key /home/enovikov11/local-ssl/privkey.pem build",
-    "build-serve": "npm run build && npm run serve",
-    "eject": "react-scripts eject"
+    "dev-sandboxed": "PORT=8080 BROWSER=none react-scripts start",
+    "prod-serve": "react-scripts build && node bin/serve",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "express": "^4.17.1"
   }
 }
