--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://vr-apps.github.io/",
   "scripts": {
     "allow": "sudo sysctl net.ipv4.ip_unprivileged_port_start=0",
-    "dev-sandboxed": "PORT=8080 BROWSER=none react-scripts start",
+    "dev-sandboxed": "react-scripts start",
     "prod-serve": "react-scripts build && node bin/serve",
     "predeploy": "react-scripts build",
     "deploy": "gh-pages -d build"
